[package]
name = "claim-calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
bigdecimal = "0.3.1"
env_logger = "0.11.6"
log = "0.4.25"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
starknet = "0.13.0"
tokio = { version = "1.43.0", features = ["full"] }
